# AUTONOMUSIM

./: README.md
autonomousim_description/: CMakeLists.txt  package.xml
autonomousim_description/config/: car_config.yaml
autonomousim_description/launch/: control.launch  rviz.launch  sim.launch
autonomousim_description/materials/: gazebo.material
autonomousim_description/models/small_track/: model.config  model.sdf
autonomousim_description/rviz/: autonomusim.rviz
autonomousim_description/sensors/: all_sensors.urdf.xacro  hokuyo_utm30lx.xml  imu.xml  rpilidar_a2m8.urdf.xacro  zed.xml
autonomousim_description/sensors/sensor depo/: imu.urdf.xacro
autonomousim_description/urdf/: .inertias.xacro.swp  .materials.xacro.swp  .meshes.xacro.swp  inertias.xml  materials.xml  meshes.xml
robot_control/: CMakeLists.txt  package.xml
robot_control/launch/: robot_control.launch
robot_control/nodes/: twist_to_ackermannDrive.py
robot_control/src/: robot_control.cpp
